fixed spacing form

--- a/src/styles/components/HomeFormInput.css
+++ b/src/styles/components/HomeFormInput.css
@@ -25,12 +25,11 @@
   width: 350px;
   height: 50px;
   padding: 0 8px;
-  margin: 4px 0;
+  margin-top: 4px;
   font-weight: 400;
   font-size: 18px;
   font-family: "Ubuntu";
   color: #515e66;
-  margin: 0;
 }
 
 ::placeholder {
